# ntsc-rs.anm2

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  about.hbs  aviutl2.toml  mise.toml  parameters.yml  release.md
.github/workflows/: release.yml
demo/: demo.aup2
lua/: NTSC.anm2  key_to_label.json  label_usage_counts.json  script.lua
src/: config.rs  lib.rs
