[package]
name = "ntscrs-anm2"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aviutl2 = { git = "https://github.com/sevenc-nanashi/aviutl2-rs" }
dashmap = "6.1.0"
ntscrs = { git = "https://github.com/ntsc-rs/ntsc-rs" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"

[patch.crates-io]
fearless_simd = { git = "https://github.com/valadaptive/fearless_simd/", branch = "ntsc-rs" }
